@@ -5,6 +5,8 @@ import static net.teumteum.user.domain.Review.별로에요;
 import static net.teumteum.user.domain.Review.좋아요;
 import static net.teumteum.user.domain.Review.최고에요;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
@@ -89,7 +91,7 @@ public class UserFixture {
         @Builder.Default
         private Terms terms = new Terms(true, true);
         @Builder.Default
-        private List<Review> reviews = List.of(최고에요, 최고에요, 최고에요, 별로에요, 좋아요, 좋아요);
+        private List<Review> reviews = new ArrayList<>(Arrays.asList(최고에요, 최고에요, 최고에요, 별로에요, 좋아요, 좋아요));
     }
 
 }
